--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <h1>Uptime Monitoring</h1>
 <h2>Made Simple</h2>
 
-<div class="blurb">we offer free, simple uptime monitoring for HTTP/HTTPS sites of all kinds.When your site goes down, we\'ll send you a text to let you know</div>
+<div class="blurb">we offer free, simple uptime monitoring for HTTP/HTTPS sites of all kinds.When your site goes down,
+    we\'ll send you a text to let you know</div>
 
 <div class="ctaWrapper">
     <a href="account/create" class="cta green">Get Started</a>
